--- a/index.html
+++ b/index.html
@@ -928,7 +928,8 @@
                     <h2>Get in Touch</h2>
                     <p>Have questions or ready to start? Contact our team today for support with your <strong>AI phone receptionist</strong> setup.</p>
                  </div>
-                <div class="contact-container">
+                <script type="text/javascript" src="https://form.jotform.com/jsform/250868073250154"></script>
+                <div class="contact-container" style="display:none;">
                     <div class="contact-form">
                         <form>
                             <div class="form-group">
