--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
                     <div class="contact-info">
                         <h3>Contact Information</h3>
                         <p>Reach out to us via email or phone for inquiries, support, or custom plan details.</p>
-                        <p><strong>Email:</strong> <a href="mailto:support@weaib2b.com">support@weaib2b.com</a></p>
+                        <p><strong>Email:</strong> <a href="mailto:weaib2b@gmail.com">weaib2b@gmail.com</a></p>
                         <p><strong>Phone:</strong> <a href="tel:+19413040891">+1-941-304-0891</a></p>
                         <p>Our team is available to assist you with implementing the best <strong>virtual assistant</strong> solution for your business.</p>
                         <!-- You can add social icons here too if desired, similar to footer -->
