--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>We Ai B2B - Your 24/7 AI Phone Receptionist</title>
-    <meta name="description" content="Automate calls, scheduling, and customer service with We Ai B2B's AI phone receptionist. 24/7 call handling and virtual assistant services.">
+    <title>Ai Bradenton.com - Your 24/7 AI Phone Receptionist</title>
+    <meta name="description" content="Automate calls, scheduling, and customer service with Ai Bradenton.com's AI phone receptionist. 24/7 call handling and virtual assistant services.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -728,7 +728,7 @@
     <!-- Header -->
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="#home" class="logo">We Ai B2B</a>
+            <a href="#home" class="logo">Ai Bradenton.com</a>
             <nav>
                 <button id="menu-toggle" aria-label="Toggle Menu">☰</button>
                 <ul class="nav-links" id="nav-links">
@@ -963,7 +963,7 @@
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">Terms of Service</a></li>
             </ul>
-            <p class="copyright">© 2023 We Ai B2B. All Rights Reserved.</p>
+            <p class="copyright">© 2025 Ai Bradenton.com. All Rights Reserved.</p>
         </div>
     </footer>
 
