--- a/index.html
+++ b/index.html
@@ -846,6 +846,21 @@
             </div>
         </section>
 
+        <!-- New Interactive Demo Section -->
+        <section id="demo-interactive" style="padding: 60px 0; background-color: var(--color-bg-offwhite);"> <!-- Added some basic padding and background -->
+            <div class="container text-center"> <!-- Added container and text-center -->
+                 <div class="section-heading"> <!-- Added section heading structure -->
+                    <h2>Try Our Interactive AI Demo</h2>
+                    <p>Have a conversation with our AI receptionist, click start call.</p>
+                 </div>
+                <!-- ElevenLabs Convai Widget -->
+                <elevenlabs-convai agent-id="eEjjIstWGEoadoW6sM5J"></elevenlabs-convai>
+                <script src="https://elevenlabs.io/convai-widget/index.js" async type="text/javascript"></script>
+                <!-- End ElevenLabs Convai Widget -->
+            </div>
+        </section>
+        <!-- End New Interactive Demo Section -->
+
         <!-- Testimonials Section -->
         <section id="testimonials">
             <div class="container">
