--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
             <div class="container">
                 <h1>Meet Your 24/7 AI Phone Receptionist</h1>
                 <p class="subheadline">Automate calls, scheduling, and customer service with our cutting-edge AI technology.</p>
-                <a href="#pricing" class="btn btn-primary">Start Your Free Trial</a>
+                <a href="#pricing" class="btn btn-primary">Start Today!</a>
             </div>
         </section>
          <div class="intro-text">
